// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownMenu /> should render correctly if loading 1`] = `
<DropdownMenu
  display={true}
  isLoading={true}
  menuItems={
    Array [
      Object {
        "allowed": true,
        "assignedTo": Object {
          "id": "1",
        },
        "disabled": false,
        "handleOnClick": [MockFunction],
        "id": "1",
        "key": "assignedTo",
        "label": "label",
        "nested": true,
      },
      Object {
        "allowed": false,
        "disabled": false,
        "key": "quickFilter",
        "label": "label",
      },
      Object {
        "disabled": true,
      },
      Object {
        "disabled": false,
        "key": "dateRange",
        "label": "label",
        "menuIcon": [Function],
        "value": Object {
          "end": 0,
          "start": 0,
        },
      },
      Object {
        "disabled": false,
        "label": "label",
      },
    ]
  }
>
  <styled__DropdownWrapper>
    <span
      className="styled__DropdownWrapper-sc-5ssw50-0 fbujNX"
    >
      <styled__DropdownInner
        direction={null}
      >
        <main
          className="styled__DropdownInner-sc-5ssw50-2 jjvfje"
          direction={null}
        >
          <styled__DropdownList>
            <ul
              className="styled__DropdownList-sc-5ssw50-4 hTCldj"
            >
              <span>
                <_default>
                  <styled__Wrapper>
                    <div
                      className="styled__Wrapper-sc-13fyzg2-0 dALDIE"
                    >
                      <styled__InnerWrapper>
                        <div
                          className="styled__InnerWrapper-sc-13fyzg2-1 fWGPuP"
                        >
                          <styled__LoaderWrapper>
                            <div
                              className="styled__LoaderWrapper-sc-13fyzg2-2 dYpael"
                            >
                              <styled__LoaderIcon>
                                <test-file-stub
                                  className="styled__LoaderIcon-sc-13fyzg2-3 hIjAWU"
                                />
                              </styled__LoaderIcon>
                              <styled__LoaderIcon>
                                <test-file-stub
                                  className="styled__LoaderIcon-sc-13fyzg2-3 hIjAWU"
                                />
                              </styled__LoaderIcon>
                              <styled__LoaderIcon>
                                <test-file-stub
                                  className="styled__LoaderIcon-sc-13fyzg2-3 hIjAWU"
                                />
                              </styled__LoaderIcon>
                            </div>
                          </styled__LoaderWrapper>
                        </div>
                      </styled__InnerWrapper>
                    </div>
                  </styled__Wrapper>
                </_default>
              </span>
            </ul>
          </styled__DropdownList>
        </main>
      </styled__DropdownInner>
    </span>
  </styled__DropdownWrapper>
</DropdownMenu>
`;

exports[`<DropdownMenu /> should render correctly with full props 1`] = `
<DropdownMenu
  deleteItem={true}
  display={true}
  handleDelete={[MockFunction]}
  header={[Function]}
  menuItems={
    Array [
      Object {
        "allowed": true,
        "assignedTo": Object {
          "id": "1",
        },
        "disabled": false,
        "handleOnClick": [MockFunction],
        "id": "1",
        "key": "assignedTo",
        "label": "label",
        "nested": true,
      },
      Object {
        "allowed": false,
        "disabled": false,
        "key": "quickFilter",
        "label": "label",
      },
      Object {
        "disabled": true,
      },
      Object {
        "disabled": false,
        "key": "dateRange",
        "label": "label",
        "menuIcon": [Function],
        "value": Object {
          "end": 0,
          "start": 0,
        },
      },
      Object {
        "disabled": false,
        "label": "label",
      },
    ]
  }
  persistentIcon={true}
  selection={
    Array [
      "0",
      "1",
      "2",
    ]
  }
  selectionIcon={[Function]}
>
  <styled__DropdownWrapper>
    <span
      className="styled__DropdownWrapper-sc-5ssw50-0 fbujNX"
    >
      <styled__DropdownInner
        direction={null}
      >
        <main
          className="styled__DropdownInner-sc-5ssw50-2 jjvfje"
          direction={null}
        >
          <styled__DropdownHeader>
            <header
              className="styled__DropdownHeader-sc-5ssw50-3 ewgdDf"
            >
              <Component />
            </header>
          </styled__DropdownHeader>
          <styled__DropdownList>
            <ul
              className="styled__DropdownList-sc-5ssw50-4 hTCldj"
            >
              <styled__DropdownListItem
                key="label-0"
                onClick={[Function]}
              >
                <li
                  className="styled__DropdownListItem-sc-5ssw50-5 dsFdXZ"
                  onClick={[Function]}
                >
                  <styled__AssigneeWrapper>
                    <span
                      className="styled__AssigneeWrapper-sc-5ssw50-8 fPUwdH"
                    >
                      <_default
                        assignedTo={
                          Object {
                            "id": "1",
                          }
                        }
                        id="1"
                        size="sm"
                        threshold={1}
                        tooltip="false"
                      >
                        <_default
                          display="false"
                          effect="solid"
                          id="tooltip-1"
                          place="bottom"
                          value={
                            Array [
                              undefined,
                            ]
                          }
                        >
                          <styled__Wrapper
                            data-for="tooltip-1"
                            data-tip={
                              Array [
                                undefined,
                              ]
                            }
                            display="false"
                            effect="solid"
                            id="tooltip-1"
                            place="bottom"
                            value={
                              Array [
                                undefined,
                              ]
                            }
                          >
                            <div
                              className="styled__Wrapper-funpqb-0 cznzQQ"
                              data-for="tooltip-1"
                              data-tip={
                                Array [
                                  undefined,
                                ]
                              }
                              display="false"
                              id="tooltip-1"
                              value={
                                Array [
                                  undefined,
                                ]
                              }
                            >
                              <styled__AssigneeWrapper>
                                <div
                                  className="styled__AssigneeWrapper-sc-1sogfbk-0 liVcjM"
                                >
                                  <ul />
                                </div>
                              </styled__AssigneeWrapper>
                              <styled__TooltipWrapper
                                display="false"
                              >
                                <div
                                  className="styled__TooltipWrapper-funpqb-1 iMiXwI"
                                  display="false"
                                >
                                  <ReactTooltip
                                    clickable={false}
                                    delayShow={300}
                                    effect="solid"
                                    getContent={[Function]}
                                    html={true}
                                    id="tooltip-1"
                                    insecure={true}
                                    multiline={true}
                                    place="bottom"
                                    resizeHide={true}
                                    type="dark"
                                    wrapper="div"
                                  >
                                    <div
                                      className="__react_component_tooltip place-bottom type-dark"
                                      data-id="tooltip"
                                      id="tooltip-1"
                                    >
                                      null
                                    </div>
                                  </ReactTooltip>
                                </div>
                              </styled__TooltipWrapper>
                            </div>
                          </styled__Wrapper>
                        </_default>
                      </_default>
                    </span>
                  </styled__AssigneeWrapper>
                  <styled__DropdownListItemInner>
                    <span
                      className="styled__DropdownListItemInner-sc-5ssw50-6 eKSTtp"
                    >
                      <styled__NestedChev>
                        <span
                          className="styled__NestedChev-sc-5ssw50-11 cmEytR"
                        />
                      </styled__NestedChev>
                      <span>
                        label
                      </span>
                    </span>
                  </styled__DropdownListItemInner>
                  <styled__DeleteListItem
                    onClick={[Function]}
                  >
                    <span
                      className="styled__DeleteListItem-sc-5ssw50-9 ejiud"
                      onClick={[Function]}
                    >
                      <_default
                        effect="solid"
                        id="label"
                        place="top"
                        value="Delete"
                      >
                        <styled__Wrapper
                          data-for="label"
                          data-tip="Delete"
                          effect="solid"
                          id="label"
                          place="top"
                          value="Delete"
                        >
                          <div
                            className="styled__Wrapper-funpqb-0 cznzQQ"
                            data-for="label"
                            data-tip="Delete"
                            id="label"
                            value="Delete"
                          >
                            <styled__CloseIcon>
                              <test-file-stub
                                className="styled__CloseIcon-sc-5ssw50-10 iOJXPf"
                              />
                            </styled__CloseIcon>
                            <styled__TooltipWrapper
                              display="true"
                            >
                              <div
                                className="styled__TooltipWrapper-funpqb-1 gQtIVd"
                                display="true"
                              >
                                <ReactTooltip
                                  clickable={false}
                                  delayShow={300}
                                  effect="solid"
                                  getContent={[Function]}
                                  html={true}
                                  id="label"
                                  insecure={true}
                                  multiline={true}
                                  place="top"
                                  resizeHide={true}
                                  type="dark"
                                  wrapper="div"
                                >
                                  <div
                                    className="__react_component_tooltip place-top type-dark"
                                    data-id="tooltip"
                                    id="label"
                                  >
                                    null
                                  </div>
                                </ReactTooltip>
                              </div>
                            </styled__TooltipWrapper>
                          </div>
                        </styled__Wrapper>
                      </_default>
                    </span>
                  </styled__DeleteListItem>
                  <styled__SelectionIcon
                    deleteItem={true}
                    selected={true}
                  >
                    <span
                      className="styled__SelectionIcon-sc-5ssw50-7 kbZDns"
                      selected={true}
                    />
                  </styled__SelectionIcon>
                </li>
              </styled__DropdownListItem>
              <styled__DropdownListItem
                key="label-1"
                onClick={[Function]}
              >
                <li
                  className="styled__DropdownListItem-sc-5ssw50-5 dsFdXZ"
                  onClick={[Function]}
                >
                  <styled__DropdownListItemInner>
                    <span
                      className="styled__DropdownListItemInner-sc-5ssw50-6 eKSTtp"
                    >
                      <span>
                        label
                      </span>
                    </span>
                  </styled__DropdownListItemInner>
                  <styled__DeleteListItem
                    onClick={[Function]}
                  >
                    <span
                      className="styled__DeleteListItem-sc-5ssw50-9 ejiud"
                      onClick={[Function]}
                    >
                      <_default
                        effect="solid"
                        id="label"
                        place="top"
                        value="Delete"
                      >
                        <styled__Wrapper
                          data-for="label"
                          data-tip="Delete"
                          effect="solid"
                          id="label"
                          place="top"
                          value="Delete"
                        >
                          <div
                            className="styled__Wrapper-funpqb-0 cznzQQ"
                            data-for="label"
                            data-tip="Delete"
                            id="label"
                            value="Delete"
                          >
                            <styled__CloseIcon>
                              <test-file-stub
                                className="styled__CloseIcon-sc-5ssw50-10 iOJXPf"
                              />
                            </styled__CloseIcon>
                            <styled__TooltipWrapper
                              display="true"
                            >
                              <div
                                className="styled__TooltipWrapper-funpqb-1 gQtIVd"
                                display="true"
                              >
                                <ReactTooltip
                                  clickable={false}
                                  delayShow={300}
                                  effect="solid"
                                  getContent={[Function]}
                                  html={true}
                                  id="label"
                                  insecure={true}
                                  multiline={true}
                                  place="top"
                                  resizeHide={true}
                                  type="dark"
                                  wrapper="div"
                                >
                                  <div
                                    className="__react_component_tooltip place-top type-dark"
                                    data-id="tooltip"
                                    id="label"
                                  >
                                    null
                                  </div>
                                </ReactTooltip>
                              </div>
                            </styled__TooltipWrapper>
                          </div>
                        </styled__Wrapper>
                      </_default>
                    </span>
                  </styled__DeleteListItem>
                  <styled__SelectionIcon
                    deleteItem={true}
                    selected={false}
                  >
                    <span
                      className="styled__SelectionIcon-sc-5ssw50-7 gZrvAV"
                      selected={false}
                    />
                  </styled__SelectionIcon>
                </li>
              </styled__DropdownListItem>
              <styled__DropdownListItem
                key="label-3"
                onClick={[Function]}
              >
                <li
                  className="styled__DropdownListItem-sc-5ssw50-5 dsFdXZ"
                  onClick={[Function]}
                >
                  <styled__MenuIconWrapper>
                    <span
                      className="styled__MenuIconWrapper-sc-5ssw50-1 ckaCLk"
                    >
                      <menuIcon>
                        <p>
                          Icon
                        </p>
                      </menuIcon>
                    </span>
                  </styled__MenuIconWrapper>
                  <styled__DropdownListItemInner>
                    <span
                      className="styled__DropdownListItemInner-sc-5ssw50-6 eKSTtp"
                    >
                      <span>
                        label
                      </span>
                    </span>
                  </styled__DropdownListItemInner>
                  <styled__DeleteListItem
                    onClick={[Function]}
                  >
                    <span
                      className="styled__DeleteListItem-sc-5ssw50-9 ejiud"
                      onClick={[Function]}
                    >
                      <_default
                        effect="solid"
                        id="label"
                        place="top"
                        value="Delete"
                      >
                        <styled__Wrapper
                          data-for="label"
                          data-tip="Delete"
                          effect="solid"
                          id="label"
                          place="top"
                          value="Delete"
                        >
                          <div
                            className="styled__Wrapper-funpqb-0 cznzQQ"
                            data-for="label"
                            data-tip="Delete"
                            id="label"
                            value="Delete"
                          >
                            <styled__CloseIcon>
                              <test-file-stub
                                className="styled__CloseIcon-sc-5ssw50-10 iOJXPf"
                              />
                            </styled__CloseIcon>
                            <styled__TooltipWrapper
                              display="true"
                            >
                              <div
                                className="styled__TooltipWrapper-funpqb-1 gQtIVd"
                                display="true"
                              >
                                <ReactTooltip
                                  clickable={false}
                                  delayShow={300}
                                  effect="solid"
                                  getContent={[Function]}
                                  html={true}
                                  id="label"
                                  insecure={true}
                                  multiline={true}
                                  place="top"
                                  resizeHide={true}
                                  type="dark"
                                  wrapper="div"
                                >
                                  <div
                                    className="__react_component_tooltip place-top type-dark"
                                    data-id="tooltip"
                                    id="label"
                                  >
                                    null
                                  </div>
                                </ReactTooltip>
                              </div>
                            </styled__TooltipWrapper>
                          </div>
                        </styled__Wrapper>
                      </_default>
                    </span>
                  </styled__DeleteListItem>
                  <styled__SelectionIcon
                    deleteItem={true}
                    selected={false}
                  >
                    <span
                      className="styled__SelectionIcon-sc-5ssw50-7 gZrvAV"
                      selected={false}
                    />
                  </styled__SelectionIcon>
                </li>
              </styled__DropdownListItem>
              <styled__DropdownListItem
                key="label-4"
                onClick={[Function]}
              >
                <li
                  className="styled__DropdownListItem-sc-5ssw50-5 dsFdXZ"
                  onClick={[Function]}
                >
                  <styled__DropdownListItemInner>
                    <span
                      className="styled__DropdownListItemInner-sc-5ssw50-6 eKSTtp"
                    >
                      <span>
                        label
                      </span>
                    </span>
                  </styled__DropdownListItemInner>
                  <styled__DeleteListItem
                    onClick={[Function]}
                  >
                    <span
                      className="styled__DeleteListItem-sc-5ssw50-9 ejiud"
                      onClick={[Function]}
                    >
                      <_default
                        effect="solid"
                        id="label"
                        place="top"
                        value="Delete"
                      >
                        <styled__Wrapper
                          data-for="label"
                          data-tip="Delete"
                          effect="solid"
                          id="label"
                          place="top"
                          value="Delete"
                        >
                          <div
                            className="styled__Wrapper-funpqb-0 cznzQQ"
                            data-for="label"
                            data-tip="Delete"
                            id="label"
                            value="Delete"
                          >
                            <styled__CloseIcon>
                              <test-file-stub
                                className="styled__CloseIcon-sc-5ssw50-10 iOJXPf"
                              />
                            </styled__CloseIcon>
                            <styled__TooltipWrapper
                              display="true"
                            >
                              <div
                                className="styled__TooltipWrapper-funpqb-1 gQtIVd"
                                display="true"
                              >
                                <ReactTooltip
                                  clickable={false}
                                  delayShow={300}
                                  effect="solid"
                                  getContent={[Function]}
                                  html={true}
                                  id="label"
                                  insecure={true}
                                  multiline={true}
                                  place="top"
                                  resizeHide={true}
                                  type="dark"
                                  wrapper="div"
                                >
                                  <div
                                    className="__react_component_tooltip place-top type-dark"
                                    data-id="tooltip"
                                    id="label"
                                  >
                                    null
                                  </div>
                                </ReactTooltip>
                              </div>
                            </styled__TooltipWrapper>
                          </div>
                        </styled__Wrapper>
                      </_default>
                    </span>
                  </styled__DeleteListItem>
                  <styled__SelectionIcon
                    deleteItem={true}
                    selected={false}
                  >
                    <span
                      className="styled__SelectionIcon-sc-5ssw50-7 gZrvAV"
                      selected={false}
                    />
                  </styled__SelectionIcon>
                </li>
              </styled__DropdownListItem>
            </ul>
          </styled__DropdownList>
        </main>
      </styled__DropdownInner>
    </span>
  </styled__DropdownWrapper>
</DropdownMenu>
`;

exports[`<DropdownMenu /> should render correctly with mandatory props 1`] = `
<DropdownMenu
  display={true}
  menuItems={
    Array [
      Object {
        "allowed": true,
        "assignedTo": Object {
          "id": "1",
        },
        "disabled": false,
        "handleOnClick": [MockFunction],
        "id": "1",
        "key": "assignedTo",
        "label": "label",
        "nested": true,
      },
      Object {
        "allowed": false,
        "disabled": false,
        "key": "quickFilter",
        "label": "label",
      },
      Object {
        "disabled": true,
      },
      Object {
        "disabled": false,
        "key": "dateRange",
        "label": "label",
        "menuIcon": [Function],
        "value": Object {
          "end": 0,
          "start": 0,
        },
      },
      Object {
        "disabled": false,
        "label": "label",
      },
    ]
  }
>
  <styled__DropdownWrapper>
    <span
      className="styled__DropdownWrapper-sc-5ssw50-0 fbujNX"
    >
      <styled__DropdownInner
        direction={null}
      >
        <main
          className="styled__DropdownInner-sc-5ssw50-2 jjvfje"
          direction={null}
        >
          <styled__DropdownList>
            <ul
              className="styled__DropdownList-sc-5ssw50-4 hTCldj"
            >
              <styled__DropdownListItem
                key="label-0"
                onClick={[Function]}
              >
                <li
                  className="styled__DropdownListItem-sc-5ssw50-5 dsFdXZ"
                  onClick={[Function]}
                >
                  <styled__AssigneeWrapper>
                    <span
                      className="styled__AssigneeWrapper-sc-5ssw50-8 fPUwdH"
                    >
                      <_default
                        assignedTo={
                          Object {
                            "id": "1",
                          }
                        }
                        id="1"
                        size="sm"
                        threshold={1}
                        tooltip="false"
                      >
                        <_default
                          display="false"
                          effect="solid"
                          id="tooltip-1"
                          place="bottom"
                          value={
                            Array [
                              undefined,
                            ]
                          }
                        >
                          <styled__Wrapper
                            data-for="tooltip-1"
                            data-tip={
                              Array [
                                undefined,
                              ]
                            }
                            display="false"
                            effect="solid"
                            id="tooltip-1"
                            place="bottom"
                            value={
                              Array [
                                undefined,
                              ]
                            }
                          >
                            <div
                              className="styled__Wrapper-funpqb-0 cznzQQ"
                              data-for="tooltip-1"
                              data-tip={
                                Array [
                                  undefined,
                                ]
                              }
                              display="false"
                              id="tooltip-1"
                              value={
                                Array [
                                  undefined,
                                ]
                              }
                            >
                              <styled__AssigneeWrapper>
                                <div
                                  className="styled__AssigneeWrapper-sc-1sogfbk-0 liVcjM"
                                >
                                  <ul />
                                </div>
                              </styled__AssigneeWrapper>
                              <styled__TooltipWrapper
                                display="false"
                              >
                                <div
                                  className="styled__TooltipWrapper-funpqb-1 iMiXwI"
                                  display="false"
                                >
                                  <ReactTooltip
                                    clickable={false}
                                    delayShow={300}
                                    effect="solid"
                                    getContent={[Function]}
                                    html={true}
                                    id="tooltip-1"
                                    insecure={true}
                                    multiline={true}
                                    place="bottom"
                                    resizeHide={true}
                                    type="dark"
                                    wrapper="div"
                                  >
                                    <div
                                      className="__react_component_tooltip place-bottom type-dark"
                                      data-id="tooltip"
                                      id="tooltip-1"
                                    >
                                      null
                                    </div>
                                  </ReactTooltip>
                                </div>
                              </styled__TooltipWrapper>
                            </div>
                          </styled__Wrapper>
                        </_default>
                      </_default>
                    </span>
                  </styled__AssigneeWrapper>
                  <styled__DropdownListItemInner>
                    <span
                      className="styled__DropdownListItemInner-sc-5ssw50-6 eKSTtp"
                    >
                      <styled__NestedChev>
                        <span
                          className="styled__NestedChev-sc-5ssw50-11 cmEytR"
                        />
                      </styled__NestedChev>
                      <span>
                        label
                      </span>
                    </span>
                  </styled__DropdownListItemInner>
                </li>
              </styled__DropdownListItem>
              <styled__DropdownListItem
                key="label-1"
                onClick={[Function]}
              >
                <li
                  className="styled__DropdownListItem-sc-5ssw50-5 dsFdXZ"
                  onClick={[Function]}
                >
                  <styled__DropdownListItemInner>
                    <span
                      className="styled__DropdownListItemInner-sc-5ssw50-6 eKSTtp"
                    >
                      <span>
                        label
                      </span>
                    </span>
                  </styled__DropdownListItemInner>
                </li>
              </styled__DropdownListItem>
              <styled__DropdownListItem
                key="label-3"
                onClick={[Function]}
              >
                <li
                  className="styled__DropdownListItem-sc-5ssw50-5 dsFdXZ"
                  onClick={[Function]}
                >
                  <styled__MenuIconWrapper>
                    <span
                      className="styled__MenuIconWrapper-sc-5ssw50-1 ckaCLk"
                    >
                      <menuIcon>
                        <p>
                          Icon
                        </p>
                      </menuIcon>
                    </span>
                  </styled__MenuIconWrapper>
                  <styled__DropdownListItemInner>
                    <span
                      className="styled__DropdownListItemInner-sc-5ssw50-6 eKSTtp"
                    >
                      <span>
                        label
                      </span>
                    </span>
                  </styled__DropdownListItemInner>
                </li>
              </styled__DropdownListItem>
              <styled__DropdownListItem
                key="label-4"
                onClick={[Function]}
              >
                <li
                  className="styled__DropdownListItem-sc-5ssw50-5 dsFdXZ"
                  onClick={[Function]}
                >
                  <styled__DropdownListItemInner>
                    <span
                      className="styled__DropdownListItemInner-sc-5ssw50-6 eKSTtp"
                    >
                      <span>
                        label
                      </span>
                    </span>
                  </styled__DropdownListItemInner>
                </li>
              </styled__DropdownListItem>
            </ul>
          </styled__DropdownList>
        </main>
      </styled__DropdownInner>
    </span>
  </styled__DropdownWrapper>
</DropdownMenu>
`;
